# rust_integration_2

./: Cargo.toml  build.rs
resources/: resources.gresource.xml  style.css  window.ui
src/: main.rs
src/gui/window/: imp.rs  mod.rs
src/service/: imp.rs  mod.rs
src/service/adapter/: file_adapter.rs  mod.rs
src/service/models/: factory.rs  mod.rs  models_xml.rs
